# notes-app

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  Cargo.toml  MODULE.bazel  PLAN.md  README.md
.claude/: settings.json
.claude/agents/: api-designer.md  junior-dev.md  naive-tester.md  perf-engineer.md  qa-engineer.md  reuse-auditor.md  security-reviewer.md  staff-engineer.md  user-flow-auditor.md  ux-reviewer.md
.claude/commands/: unleash.md
.claude/hooks/: check-docs-freshness.sh
apps/android/: CLAUDE.md  gradle.properties
apps/android/app/: build.gradle.kts
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/com/notes/: MainActivity.kt  NotesListScreen.kt  NotesViewModel.kt
apps/android/app/src/main/java/uniffi/platform_core/: platform_core.kt
apps/android/gradle/: libs.versions.toml
apps/ios/: BUILD.bazel  CLAUDE.md  Info.plist
apps/ios/Sources/App/: NotesApp.swift
apps/ios/Sources/Features/Notes/: NotesListView.swift  NotesViewModel.swift
apps/ios/Sources/Networking/: APIClient.swift  APIError.swift  NotesAPI.swift
apps/ios/Tests/: APIClientTests.swift  NotesListViewTests.swift  NotesViewModelTests.swift  TestDoubles.swift
docs/: architecture.md  conventions.md  retrospective.md  test-plan.md
docs/recipes/: add-endpoint.md  add-ios-screen.md
libs/platform-core/: BUILD.bazel  CLAUDE.md  Cargo.toml
libs/platform-core/src/: ffi.rs  id.rs  lib.rs  model.rs  store.rs  time.rs  validate.rs
libs/schema/: BUILD.bazel  CLAUDE.md  notes.proto
libs/schema/Sources/NotesSchema/: Notes.swift
services/api/: BUILD.bazel  CLAUDE.md  Cargo.toml
services/api/src/: dto.rs  error.rs  lib.rs  main.rs  routes.rs  store.rs
services/api/tests/: notes_integration.rs
tools/: build-android.sh  run-ios-sim.sh
tools/bench/: bench.sh
tools/uniffi-bindgen/: Cargo.toml
