module(name = "notes_app", version = "0.0.1")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")

# Rust backend (services/api)
bazel_dep(name = "rules_rust", version = "0.70.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")

# iOS app (apps/ios) — extensions wired in Phase 7
bazel_dep(name = "apple_support", version = "2.2.0")
bazel_dep(name = "rules_swift", version = "3.6.1")
bazel_dep(name = "rules_apple", version = "4.5.3")
bazel_dep(name = "rules_xcodeproj", version = "4.0.1")

# Shared proto schema (libs/schema)
#   .proto is source of truth for both languages.
#   Rust: prost-generated via rules_rust_prost (Bazel-native).
#   Swift: hand-written Codables mirroring .proto fields — see retrospective
#   Phase 4 entry for why (rules_proto_grpc_swift chain not Bazel 9 ready).
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_rust_prost", version = "0.70.0")
