load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@crates//:defs.bzl", "all_crate_deps")

rust_library(
    name = "platform_core",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "platform_core",
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True),
)

rust_test(
    name = "platform_core_test",
    crate = ":platform_core",
    edition = "2021",
)
