[package]
name = "notes_api"
version = "0.0.1"
edition = "2021"

[lib]
name = "notes_api"
path = "src/lib.rs"

[[bin]]
name = "notes_api"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]
http-body-util = "0.1"
