[workspace]

[package]
name = "uniffi-bindgen"
version = "0.1.0"
edition = "2021"

# Standalone crate, NOT in the workspace Cargo.toml, so uniffi_testing
# (pulled in by "cli" feature) never pollutes the platform-core Bazel build.

[[bin]]
name = "uniffi-bindgen"
path = "src/main.rs"

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }
